# GCodeSimpler

./: .gitignore  CMakeLists.txt  GCodeSimpler.pro  GCodeSimpler.ts  GCodeSimpler_zh_CN.ts  README.md  gcodesimpler.cpp  gcodesimpler.h  gcodesimplerwidget.cpp  gcodesimplerwidget.h  main.cpp
